# test_task_sekunda

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
migrations/: env.py
scripts/db_scripts/: 01_db_init.sql
src/handbook/: main.py
src/handbook/domain/entities/: base.py  business_type.py  facility.py  organization.py
src/handbook/domain/events/: base.py  organization.py
src/handbook/domain/exceptions/: base.py  business_type_err.py  facility_err.py  org_err.py
src/handbook/domain/repositories/: business_type_repository.py  facility_repository.py  organization_repository.py
src/handbook/domain/services/: business_type_class_service.py
src/handbook/domain/val_objs/: address.py  base.py  business_name.py  coords.py  ids.py  organization_name.py  phone.py
src/handbook/infra/db/: base.py  dependency.py  session.py
src/handbook/infra/logging/: config.py  middleware.py
src/handbook/infra/repositories/: business_type_repo_impl.py  facility_repo_impl.py  in_mem_bt_repo.py  in_mem_facility_repo.py  in_mem_org_repo.py  organization_repo_impl.py
src/handbook/presentation/: dependencies.py  router.py
src/handbook/presentation/api/: facilities.py  (+2 more)
src/handbook/setup/: app_factory.py  dependencies_g.py
tests/: conftest.py
tests/e2e/: conftest.py  test_get_org_by_id_e2e.py
tests/integration/: conftest.py  fixtures.py
tests/integration/repos_impl/: test_bt_repo_impl.py  test_facility_repo_impl.py  test_org_repo_impl.py
tests/unit/application/: conftest.py
tests/unit/domain/: conftest.py
(+67 files in other folders)
